simplify long term memory